# traffic-lights

./: .gitignore  README.md  compose.yml  run.sh
docker/: Dockerfile  services.sh
gateway-http-server-redis/: bun.lockb  main.ts  package.json
traffic-lights-monitor/: bun.lockb  package.json  tailwind.config.ts
traffic-lights-monitor/src/app/: layout.tsx  page.tsx
traffic-lights-monitor/src/application/use-cases/: get-traffic-lights.ts
traffic-lights-monitor/src/domain/: traffic-light.ts
traffic-lights-monitor/src/infrastructure/adapters/: traffic-light.adapter.ts
traffic-lights-monitor/src/interfaces/components/traffic-lights/: intersection.tsx  traffic-light.tsx
traffic-lights-orcherstrator/: CMakeLists.txt  prj.conf
traffic-lights-orcherstrator/src/: http_client.cpp  http_client.hpp  logger.cpp  logger.h  main.cpp  main.hpp
traffic-lights-subscriber/: main.ts  package.json
traffic-lights-ws-server/: README.md  bun.lockb  main.ts  package.json  tsconfig.json
